daemon/macros/tests/ui/unknown_attribute.stderr
error: Unknown field: `unknown_key`
 --> tests/ui/unknown_attribute.rs:4:11
  |
4 | #[newtype(unknown_key)]
  |           ^^^^^^^^^^^
